Refactor StockViewModel
* Improved the performance of some methods